fixed layout issue

--- a/src/components/containers.css
+++ b/src/components/containers.css
@@ -1,7 +1,7 @@
 .container {
     display: grid;
-    grid-template-columns: 1fr auto auto 1fr;
-    grid-template-rows: 1fr auto 1fr;
+    grid-template-columns: 1fr auto 1fr;
+    grid-template-rows: 1fr auto auto 1fr;
     justify-content: center;
     align-items: center;
     justify-items: center;
@@ -22,7 +22,7 @@
 
 .text-container-1 {
   height: 150px;
-  width: 600px;
+  width: 500px;
   grid-row: 2 / 2;
   grid-column: 2 / 2;
   margin-bottom: 10px;
